# PolyCalc

./: .gitignore  CMakeLists.txt  README.md
include/polycalc/: parameters.hpp
include/polycalc/interpolation/: lagrange.hpp
include/polycalc/polynomial/: jacobi.hpp
include/polycalc/quadrature/: gauss_jacobi.hpp  gauss_lobatto.hpp  gauss_lobatto_chebychev.hpp  gauss_lobatto_jacobi.hpp  gauss_lobatto_legendre.hpp  gauss_radau.hpp  gauss_radau_chebychev.hpp  gauss_radau_jacobi.hpp  gauss_radau_legendre.hpp
scripts/: gauss_chebyshev_t.py  gauss_cheyshev_u.py  gauss_gen_laguerre.py  gauss_hermite.py  gauss_jacoby.py  gauss_laguerre.py  gauss_legendre.py  gauss_lobatto.py
src/: CMakeLists.txt
test/: CMakeLists.txt  gauss_lobatto.cpp  gauss_lobatto_legendre.cpp  jacobi.cpp  lagrange.cpp  test_jacobi.cpp  utilities.hpp
